--- a/css/style.css
+++ b/css/style.css
@@ -19,18 +19,28 @@
     display:flex;
     height: 1000px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 10px;
     
 }
 .flex-containerTwo div{
     background-color: peachpuff;
     border: 5px solid brown;
-    width: 100px;
+    /* width: 100px; */
     height: 100px;
+    flex: auto;
 }
-.three{
+/* .three{
     align-self: flex-start;
+} */
+
+.input{
+    display: flex;
+    
+}
+.input input{
+    background-color: aqua;
+    flex: auto;
 }
 
 
